feat: Initial project commit
This commit introduces the foundational structure and core features of the Music application.

### Features

- **Local Media Playback**: Implements playback for local audio and video files found on the device. Includes a persistent notification and media session for background control.
- **UI Structure**:
    - Establishes a modern, tab-based navigation structure with a bottom navigation bar for "My Music," "Duo," "Downloads," "Browse," and "Profile."
    - Implements a collapsible player sheet for an enhanced "Now Playing" experience.
- **Duo (Local Sync)**: Adds the "Duo" feature for synchronizing music playback between two devices locally over Wi-Fi Direct. Includes device discovery, connection management, and shared playback controls.
- **Browse & Download**:
    - Integrates with the YouTube API for browsing, searching, and viewing video details.
    - Implements a download manager using `yt-dlp` to extract and download content from various platforms.
- **Equalizer**: Adds a 5-band graphic equalizer with bass boost and virtualizer effects. Includes presets and the ability to save custom settings.
- **Authentication**: Integrates Google Sign-In for YouTube API access and Firebase for future features.

### Code Structure

- **Core Architecture**: Adopts MVVM (Model-View-ViewModel) architecture using `ViewModel`, `LiveData`, and `Coroutines`.
- **UI Components**: Uses `RecyclerView`, `ViewPager2`, `BottomSheetDialogFragment`, and other Material Design components for a modern UI.
- **Services**: `MusicService` handles background playback, while `DownloadService` manages downloads.
- **Modularity**: Organizes features into distinct packages (e.g., `duo`, `download`, `browse`, `equalizer`).
- **Project Configuration**: Sets up the project with Gradle Kotlin DSL and version catalogs for streamlined dependency management.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -96,6 +96,10 @@
     <string name="duo_searching">Searching for devices…</string>
     <string name="duo_disconnect">Disconnect</string>
     <string name="duo_no_common_songs">No common songs found\nBoth devices need the same songs</string>
+    <string name="duo_no_common_videos">No common videos found</string>
+    <string name="duo_no_common_artists">No common artists found</string>
+    <string name="duo_no_common_albums">No common albums found</string>
+    <string name="duo_no_common_folders">No common folders found</string>
     <string name="duo_resync">Sync Library</string>
     <string name="duo_connect_confirm_title">Connect to device?</string>
     <string name="duo_connect_confirm_message">Do you want to connect to %s?</string>
@@ -133,6 +137,9 @@
     <string name="duo_wifi_direct_connected">Connected via WiFi Direct</string>
     <string name="duo_connection_wifi_direct">WiFi Direct</string>
     <string name="duo_connection_online">Online (WebRTC)</string>
+    <string name="duo_song_not_common_title">Song Not Available</string>
+    <string name="duo_song_not_common_message">Your duo partner doesn\'t have this song. If you play it, your duo connection will be lost.</string>
+    <string name="duo_play_anyway">Play Anyway</string>
     
     <!-- Firebase -->
     <string name="default_web_client_id" translatable="false">82538693808-8vk4jv8t331p3sd1t83qrnoltefb82m8.apps.googleusercontent.com</string>
