feat(duo): Implement real-time Duo Chat with voice messaging
This commit introduces a full-fledged, real-time chat feature within the Duo connected experience, enabling users to communicate via text and voice messages.

### Features

-   **Duo Chat UI**:
    -   Adds a new full-screen, Jetpack Compose-based chat interface (`DuoChatBottomSheet`) accessible from the Duo tab.
    -   Includes a modern chat bubble design (`ChatBubble.kt`) with support for message status indicators (Sending, Sent, Delivered, Read, Failed).
    -   Implements a real-time typing indicator (`TypingIndicator.kt`) to show when the partner is composing a message.
    -   Features a dynamic, matrix-style particle background (`ParticleBackground.kt`) for visual flair.

-   **Text & Voice Messaging**:
    -   Supports sending and receiving text messages with basic Markdown formatting (`MarkdownText.kt`).
    -   Integrates voice messaging functionality, including recording via the microphone, sending voice data, and a custom playback UI (`VoiceMessageContent`) within the chat bubble.
    -   Manages `RECORD_AUDIO` permission requests for voice recording.

-   **Chat Backend & Logic**:
    -   Establishes a `ChatRepository` to manage chat state, including sending/receiving messages and typing notifications over both WebRTC and Wi-Fi Direct connections.
    -   Updates `DuoViewModel` to handle chat state, unread message status, voice recording, and permission requests.
    -   Introduces new `DuoMessage` types for chat (`CHAT_MESSAGE`, `VOICE_MESSAGE`), typing status, and message acknowledgements (`MESSAGE_DELIVERED`, `MESSAGE_READ`).
    -   Adds an unread message indicator badge to the chat button on the Duo screen.

### Refinements & Bug Fixes

-   **Connection Quality Monitoring**:
    -   Implements connection quality monitoring for both WebRTC and Wi-Fi Direct.
    -   WebRTC quality is calculated based on round-trip time (RTT) and packet loss.
    -   Wi-Fi Direct quality is estimated via a 

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,9 @@
     <string name="duo_song_not_common_title">Song Not Available</string>
     <string name="duo_song_not_common_message">Your duo partner doesn\'t have this song. If you play it, your duo connection will be lost.</string>
     <string name="duo_play_anyway">Play Anyway</string>
+    <string name="duo_chat">Chat</string>
+    <string name="duo_chat_title">Duo Chat</string>
+    <string name="duo_type_message">Type a message</string>
     
     <!-- Firebase -->
     <string name="default_web_client_id" translatable="false">82538693808-8vk4jv8t331p3sd1t83qrnoltefb82m8.apps.googleusercontent.com</string>
